test/files/neg/t0015.check
t0015.scala:5: error: type mismatch;
 found   : () => Nothing
 required: (Nothing) => ?
   Nil.map(f _)
           ^
t0015.scala:21: error: type mismatch;
 found   : M
 required: M.this.selfType
    f[Int](self: selfType)
           ^
two errors found
